[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Visitor.gd" type="Script" id=1]
[ext_resource path="res://scenes/VisitorAnimSprite_Woman1.tres" type="SpriteFrames" id=2]
[ext_resource path="res://scenes/VisitorAnimSprite_Girl1.tres" type="SpriteFrames" id=3]
[ext_resource path="res://scenes/VisitorAnimSprite_Boy1.tres" type="SpriteFrames" id=4]
[ext_resource path="res://scenes/VisitorAnimSprite_Man1.tres" type="SpriteFrames" id=5]
[ext_resource path="res://scenes/VisitorAnimSprite_Woman2.tres" type="SpriteFrames" id=6]
[ext_resource path="res://audio/groan_2.wav" type="AudioStream" id=7]
[ext_resource path="res://audio/groan_1.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/PlayerAnim.tres" type="Animation" id=9]

[sub_resource type="CanvasItemMaterial" id=1]

render_priority = 0
blend_mode = 0
light_mode = 0
_sections_unfolded = [ "Resource" ]

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Visitor" type="Area2D"]

scale = Vector2( 0.5, 0.5 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}
speed = 100
variations = [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
variations_text = [ "Jesus wants to save you!", "Buy some Girl Scout cookies!", "I'm just ringing to annoy you.", "When I was your age...", "Can I borrow some sugar?" ]
variations_sound = [ ExtResource( 7 ), ExtResource( 8 ), null, null, null ]

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

material = SubResource( 1 )
frames = ExtResource( 2 )
animation = "idle"
_sections_unfolded = [ "Material", "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
anims/walk_wiggle = ExtResource( 9 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

build_mode = 0
polygon = PoolVector2Array( -25.9161, -32.3863, 29.0114, -28.7929, 25.4181, 29.7281, -28.4828, 30.2414 )

[node name="GroanSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 7 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="PausedTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = false

[connection signal="area_shape_entered" from="." to="." method="_on_Visitor_area_shape_entered"]

[connection signal="area_shape_exited" from="." to="." method="_on_Visitor_area_shape_exited"]

[connection signal="timeout" from="PausedTimer" to="." method="_on_PausedTimer_timeout"]


